[gd_scene load_steps=9 format=3 uid="uid://dbh0flqouejng"]

[ext_resource type="Texture2D" uid="uid://chioja5x3xikr" path="res://SlimeBlue_Idle1.png" id="1_dk2ys"]
[ext_resource type="Script" path="res://TestScene2/TestEnemy.gd" id="1_rpt4g"]
[ext_resource type="Script" path="res://TestScene2/HitBox.gd" id="2_krnqk"]
[ext_resource type="Script" path="res://TestScene2/HurtBox.gd" id="3_4kkkg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r84y0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dk2ys")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tr3h6"]
size = Vector2(12, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3d5f2"]
size = Vector2(12, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kh51"]
size = Vector2(12, 10)

[node name="TestEnemy" type="CharacterBody2D"]
script = ExtResource("1_rpt4g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r84y0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 15)
shape = SubResource("RectangleShape2D_tr3h6")

[node name="EnemyHurtBox" type="Area2D" parent="."]
visible = false
position = Vector2(1.5, 15)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_4kkkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_3d5f2")

[node name="DisableTimer" type="Timer" parent="EnemyHurtBox"]

[node name="EnemyHitBox" type="Area2D" parent="."]
visible = false
position = Vector2(1.5, 15)
collision_layer = 16
collision_mask = 0
script = ExtResource("2_krnqk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_5kh51")

[node name="DisableTImer" type="Timer" parent="EnemyHitBox"]

[connection signal="area_entered" from="EnemyHurtBox" to="EnemyHurtBox" method="_on_area_entered"]
[connection signal="hurt" from="EnemyHurtBox" to="." method="_on_enemy_hurt_box_hurt"]
[connection signal="timeout" from="EnemyHurtBox/DisableTimer" to="EnemyHurtBox" method="_on_disable_timer_timeout"]
